@@ -5,6 +5,11 @@ This file contains a historical overview of changes in our own code.
 
 7.6.1 (2023-01-??) (PS only?)
 ----------------------------
+Features;
+- ALL: The batch form now allows white space (at the start or end) in the from-to
+  fields which will be removed. This allows for easier copy & paste from order
+  lists.
+
 Bugs:
 - PS: Error after fresh install: Type Error: Return value of
   \Siel\Acumulus\PrestaShop\Config\ConfigStore::load() must be of the type
@@ -37,6 +42,8 @@ Bugs:
   they must be convertible to float (in a rather strict sense). This will
   prevent errors like TypeError: Argument 2 passed to Number::floatsAreEqual()
   must be of the type float, string given, defined in Number.php:76.
+- WC: TypeError: Siel\Acumulus\WooCommerce\Helpers\Token::getObjectProperty():
+  Return value must be of type ?string, array returned in getObjectProperty:31.
 
 Refactorings:
 - Introduced PHP 7.4 syntax constructions all over the code meaning an older
